# Alpinescraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  luxuryestate.json  pyproject.toml
.github/workflows/: automatic-build-on-merge.yml  main.yml  schedule-docker.yml  test-dockerhub-login.yml  workflow.yml
src/Alpinescraper/: __init__.py  greeter.py  main.py
src/Alpinescraper/common/: items.py  logging_configuration.py  luxuryestate.py  luxuryestatespider.py  pipeline.py  scraper.py  spiders.py
tests/Alpinescraper/: test_greeter.py  test_main.py
